[1.165] sed job - mail.html

--- a/mail.html
+++ b/mail.html
@@ -143,7 +143,7 @@ stickers are on the outside.
 <dt><b>announce@openbsd.org</b>
 <dd>Важные объявления, в том числе касающиеся безопасности.
 <br>
-(<a href="https://marc.info/?l=openbsd-announce">Archive</a>)
+(<a href="https://marc.info/?l=openbsd-announce">Архив</a>)
 <p>
 
 <dt><b>misc@openbsd.org</b>
@@ -153,19 +153,19 @@ stickers are on the outside.
 а также ознакомьтесь с
 <a href="report.html">правилами по отправке bugreport'ов</a>.
 <br>
-(<a href="https://marc.info/?l=openbsd-misc">Archive</a>)
+(<a href="https://marc.info/?l=openbsd-misc">Архив</a>)
 <p>
 
 <dt><b>advocacy@openbsd.org</b>
 <dd>Promoting the use of OpenBSD.
 <br>
-(<a href="https://marc.info/?l=openbsd-advocacy">Archive</a>)
+(<a href="https://marc.info/?l=openbsd-advocacy">Архив</a>)
 <p>
 
 <dt><b>ports@openbsd.org</b>
 <dd>Обсуждения, касающиеся использования, улучшения и вообще работы над портами.
 <br>
-(<a href="https://marc.info/?l=openbsd-ports">Archive</a>)
+(<a href="https://marc.info/?l=openbsd-ports">Архив</a>)
 <p>
 
 <dt><b>misc@opensmtpd.org</b>
@@ -173,7 +173,7 @@ stickers are on the outside.
 Патчи для портированной версии мы ожидаем в виде pull request'ов в
 <a href="https://github.com/OpenSMTPD/OpenSMTPD">Github</a>.
 <br>
-(<a href="https://www.mail-archive.com/misc@opensmtpd.org">Archive</a>)
+(<a href="https://www.mail-archive.com/misc@opensmtpd.org">Архив</a>)
 <p>
 
 <dt><b>users@openbgpd.org</b>
@@ -200,7 +200,7 @@ stickers are on the outside.
 <a href="https://man.openbsd.org/sendbug">sendbug(1)</a> и последующие их
 обсуждения.
 <br>
-(<a href="https://marc.info/?l=openbsd-bugs">Archive</a>)
+(<a href="https://marc.info/?l=openbsd-bugs">Архив</a>)
 <p>
 
 <dt><b>tech@openbsd.org</b>
@@ -210,7 +210,7 @@ stickers are on the outside.
 и обсуждения патчей, разработки новых версий программ и других важных
 изменений, доступных всем желающим с целью их тестирования.
 <br>
-(<a href="https://marc.info/?l=openbsd-tech">Archive</a>)
+(<a href="https://marc.info/?l=openbsd-tech">Архив</a>)
 <p>
 
 <dt><b>libressl@openbsd.org</b>
@@ -219,7 +219,7 @@ LibreSSL.
 Патчи для портированной версии мы ожидаем в виде pull request'ов в
 <a href="https://github.com/libressl-portable/portable">Github</a>.
 <br>
-(<a href="https://marc.info/?l=libressl">Archive</a>)
+(<a href="https://marc.info/?l=libressl">Архив</a>)
 </dl>
 
 <h3>Срочные сообщения о проблемах безопасности</h3>
@@ -251,43 +251,43 @@ LibreSSL.
 <dt><b>alpha@openbsd.org</b>
 <dd>OpenBSD/alpha port.
 <br>
-(<a href="https://marc.info/?l=openbsd-alpha">Archive</a>)
+(<a href="https://marc.info/?l=openbsd-alpha">Архив</a>)
 <p>
 
 <dt><b>arm@openbsd.org</b>
 <dd>OpenBSD/armv7 and OpenBSD/arm64 ports.
 <br>
-(<a href="https://marc.info/?l=openbsd-arm">Archive</a>)
+(<a href="https://marc.info/?l=openbsd-arm">Архив</a>)
 <p>
 
 <dt><b>hppa@openbsd.org</b>
 <dd>OpenBSD/hppa port.
 <br>
-(<a href="https://marc.info/?l=openbsd-hppa">Archive</a>)
+(<a href="https://marc.info/?l=openbsd-hppa">Архив</a>)
 <p>
 
 <dt><b>m88k@openbsd.org</b>
 <dd>OpenBSD/luna88k port.
 <br>
-(<a href="https://marc.info/?l=openbsd-m88k">Archive</a>)
+(<a href="https://marc.info/?l=openbsd-m88k">Архив</a>)
 <p>
 
 <dt><b>ppc@openbsd.org</b>
 <dd>OpenBSD/macppc and other PowerPC porting efforts.
 <br>
-(<a href="https://marc.info/?l=openbsd-ppc">Archive</a>)
+(<a href="https://marc.info/?l=openbsd-ppc">Архив</a>)
 <p>
 
 <dt><b>sgi@openbsd.org</b>
 <dd>OpenBSD/sgi port.
 <br>
-(<a href="https://marc.info/?l=openbsd-sgi">Archive</a>)
+(<a href="https://marc.info/?l=openbsd-sgi">Архив</a>)
 <p>
 
 <dt><b>sparc@openbsd.org</b>
 <dd>OpenBSD/sparc64 port.
 <br>
-(<a href="https://marc.info/?l=openbsd-sparc">Archive</a>)
+(<a href="https://marc.info/?l=openbsd-sparc">Архив</a>)
 
 </dl>
 
@@ -302,13 +302,13 @@ comments.
 <dd>Automated mail of CVS source tree changes in the src, xenocara and www
 repositories.
 <br>
-(<a href="https://marc.info/?l=openbsd-cvs">Archive</a>)
+(<a href="https://marc.info/?l=openbsd-cvs">Архив</a>)
 <p>
 
 <dt><b>ports-changes@openbsd.org</b>
 <dd>Automated mail of CVS source tree changes in the ports repository.
 <br>
-(<a href="https://marc.info/?l=openbsd-ports-cvs">Archive</a>)
+(<a href="https://marc.info/?l=openbsd-ports-cvs">Архив</a>)
 
 </dl>
 
