--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <li><a href="https://www.openbsd.org/errata65.html">Патчи</a>
         <li><a href="ircs://irc.freenode.net:6697/openbsd">IRC</a>
         <li><a href="https://www.openbsd.org/report.html">Сообщить об ошибке</a>
-        <li><a href="https://www.openbsd.org/mail.html">Почтовые рассылки</a>
+        <li><a href="mail.html">Почтовые рассылки</a>
         <li><a href="https://www.openbsd.org/lyrics.html">Песни</a> &amp;
             <a href="https://www.openbsd.org/artwork.html">Artwork</a>
         <li><a href="hackathons.html">Хакатоны</a>
