[1.540] update links to mail.html - faq/index.html

--- a/faq/index.html
+++ b/faq/index.html
@@ -35,18 +35,18 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 <table>
   <tr>
     <td><a href="https://www.openbsd.org/faq/faq10.html#Patches" >Обновления безопасности</a></td>
-    <td><a href="https://man.openbsd.org">man-cтраницы</a></td>
-    <td><a href="ports/index.html"   >Книга по портам</a></td>
+    <td><a href="https://man.openbsd.org"                        >man-cтраницы</a></td>
+    <td><a href="ports/index.html"                               >Книга по портам</a></td>
   </tr>
   <tr>
     <td><a href="https://www.openbsd.org/faq/upgrade65.html"     >Обновление до 6.5</a></td>
-    <td><a href="https://www.openbsd.org/mail.html"              >Почтовые рассылки</a></td>
-    <td><a href="ports/testing.html" >Тестирование портов</a></td>
+    <td><a href="../mail.html"                                   >Почтовые рассылки</a></td>
+    <td><a href="ports/testing.html"                             >Тестирование портов</a></td>
   </tr>
   <tr>
     <td><a href="https://www.openbsd.org/faq/current.html"       >Использование -current</a></td>
     <td><a href="https://www.openbsd.org/report.html"            >Сообщить об ошибке</a></td>
-    <td><a href="pf/index.html"      >PF руководство</a></td>
+    <td><a href="pf/index.html"                                  >PF руководство</a></td>
   </tr>
 </table>
 
@@ -243,4 +243,4 @@ Eric Jackson, Wim Vandeputte и Chris Cappuccio.
 (на английском языке) на
 <a href="mailto:misc@openbsd.org">misc@openbsd.org</a>.
 Для общих вопросов об OpenBSD используйте соответствующие
-<a href="https://www.openbsd.org/mail.html">почтовые рассылки</a>.
+<a href="../mail.html">почтовые рассылки</a>.
