[1.734] update link to plat.html - index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1>Проект OpenBSD</h1>
       <ul>
         <li><a href="goals.html">Цели проекта</a>
-        <li><a href="https://www.openbsd.org/plat.html">Платформы</a>
+        <li><a href="plat.html">Платформы</a>
         <li><a href="security.html">Безопасность</a>
             <a href="crypto.html">Криптография</a>
         <li><a href="https://www.openbsd.org/events.html">Встречи и доклады</a>
