[1.1005] start with translation - faq/current.html

--- a/faq/current.html
+++ b/faq/current.html
@@ -1,7 +1,7 @@
 <!doctype html>
-<html lang=en id=faq>
+<html lang=ru id=faq>
 
-<title>Following -current and using snapshots</title>
+<title>Использование -current и snapshots</title>
 <meta charset=utf-8>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="../openbsd.css">
@@ -10,17 +10,18 @@
 <h2 id=OpenBSD>
 <a href="../index.html">
 <i>Open</i><b>BSD</b></a>
-Following -current and using snapshots
+Использование -current и snapshots
 <small>
-<a href="index.html">[FAQ Index]</a>
+<a href="index.html">[FAQ - на главную]</a>
 </small>
 </h2>
 <hr>
 
 <p>
-Active OpenBSD development is known as the
-<a href="faq5.html#Flavors">-current</a> branch.
-These sources are frequently compiled into releases known as <i>snapshots</i>.
+Основная активная разработка OpenBSD происходит в ветке
+<a href="faq5.html#Flavors">-current</a>.
+Исходники именно из этой ветки периодически компилируются и собираются
+в так называемые <i>snapshots</i>.
 
 <p>
 Aggressive changes are sometimes pushed in this branch, and complications can
