[1.540] update link to the current.html - faq/index.html

--- a/faq/index.html
+++ b/faq/index.html
@@ -44,7 +44,7 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
     <td><a href="ports/testing.html"                             >Тестирование портов</a></td>
   </tr>
   <tr>
-    <td><a href="https://www.openbsd.org/faq/current.html"       >Использование -current</a></td>
+    <td><a href="current.html"                                   >Использование -current</a></td>
     <td><a href="https://www.openbsd.org/report.html"            >Сообщить об ошибке</a></td>
     <td><a href="pf/index.html"                                  >PF руководство</a></td>
   </tr>
